module(name = "roo_windows", version = "1.3.0")

bazel_dep(name = "roo_testing", version = "1.1.4")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_collections", version = "1.3.1")
bazel_dep(name = "roo_display", version = "2.2.2")
bazel_dep(name = "roo_locale", version = "1.1.0")
bazel_dep(name = "roo_logging", version = "1.4.0")
bazel_dep(name = "roo_icons", version = "1.2.0")
bazel_dep(name = "roo_io", version = "2.0.1")
bazel_dep(name = "roo_scheduler", version = "2.1.3")
bazel_dep(name = "roo_time", version = "1.3.0")
