module(name = "roo_windows", version = "1.4.1")

bazel_dep(name = "roo_testing", version = "1.1.8")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_collections", version = "1.3.2")
bazel_dep(name = "roo_display", version = "2.3.1")
bazel_dep(name = "roo_locale", version = "1.1.1")
bazel_dep(name = "roo_logging", version = "1.4.3")
bazel_dep(name = "roo_icons", version = "1.2.1")
bazel_dep(name = "roo_io", version = "2.0.3")
bazel_dep(name = "roo_scheduler", version = "2.1.5")
bazel_dep(name = "roo_time", version = "1.3.3")
