module(name = "roo_windows", version = "1.4.2")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "roo_testing", version = "1.3.4")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "roo_collections", version = "1.4.3")
bazel_dep(name = "roo_display", version = "3.0.2")
bazel_dep(name = "roo_fonts_basic", version = "1.0.2")
bazel_dep(name = "roo_fonts_material", version = "1.0.0")
bazel_dep(name = "roo_locale", version = "1.1.2")
bazel_dep(name = "roo_logging", version = "1.5.5")
bazel_dep(name = "roo_icons", version = "1.2.2")
bazel_dep(name = "roo_io", version = "2.1.6")
bazel_dep(name = "roo_scheduler", version = "2.1.9")
bazel_dep(name = "roo_time", version = "1.4.3")
